testsuite/tests/grammar/invalid_rule_usage/test.out
== foo.lkt ==
foo.lkt:5:41: error: unknown grammar rule
5 |     @main_rule main_rule <- ExampleNode(sec_rules)
  |                                         ^^^^^^^^^


lkt_compile: Done
